-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-beta1
-
OSX 10.8.5, Xcode 5.1.x
-
59640aa7aaf1220a2739de021203f14834fc12b9
Steps to reproduce:
- create (any) desktop application from template (Widget/Console/Quick)
- start debugger (with / without breakpoints set)
Current result:
- sometimes debugger fails to start up correctly (seems as if debugger engine is trying to send commands to the lldb but lldb is not receiving them)
- typing int into the debugger command line edit makes it continue in 99% of the cases - otherwise you have to
- stop by hitting the 'x' at the progress bar (or abort debugging) and re-run debugging
- sometimes debugger fails to continue from an interrupted state
- typing cont into the debugger command line edit makes it continue in 99% of the cases
- debugging console applications seems to fail always when 'Run in Terminal' is enabled, but seems to work without
Note: All of the above work fine with 10.10 / Xcode 6.x.
For Gerrit Dashboard: QTCREATORBUG-14033 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108082,5 | Debugger: Fix debugging using older lldb (less/equal 310) | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |