Debugger: Fix debugging using older lldb (less/equal 310)

Task-number: QTCREATORBUG-14033
Change-Id: I5b65de442eca525ceffadd4d4667283a276b6af8
Reviewed-by: hjk <hjk@theqtcompany.com>